# esprima-python

./: README.rst  pyproject.toml  setup.cfg
esprima/: messages.py  nodes.py  parser.py  scanner.py  syntax.py
