[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esprima-fork"
version = "4.0.1"
authors = [
	{ name="German M. Bravo (Kronuz)", email="german.mb@gmail.com" }
]
requires-python = ">=3.7"
description = "ECMAScript parsing infrastructure for multipurpose analysis in Python"
license = "BSD-2-Clause"
license_files = "LICENSE.BSD"
readme = "README.md"
keywords = [
	"esprima",
	"ecmascript",
	"javascript",
	"parser",
	"ast"
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Code Generators",
	"Topic :: Software Development :: Compilers",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Text Processing :: General",
	"Programming Language :: Python",
	"Programming Language :: Python :: 2",
	"Programming Language :: Python :: 2.7",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.3",
	"Programming Language :: Python :: 3.4",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6"
]

[project.urls]
"Homepage" = "https://github.com/Kronuz/esprima-python"

[options]
packages = "esprima"

[options.entry_points]
console_scripts = "esprima = esprima.__main__:main"
